--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     color: var(--slate);
     font-family: 'Inter', sans-serif;
     line-height: 1.3;
+    counter-reset: section;
 }
 
 /* Side Elements */
@@ -68,6 +69,37 @@ body {
     margin: 0 auto;
     padding: 100px 0;
     max-width: 1000px;
+}
+
+.about-text p {
+    margin-bottom: 15px;
+}
+
+.skills-list {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(140px, 200px));
+    gap: 0 10px;
+    padding: 0;
+    margin: 20px 0 0 0;
+    overflow: hidden;
+    list-style: none;
+}
+
+.skills-list li {
+    position: relative;
+    margin-bottom: 10px;
+    padding-left: 20px;
+    font-family: 'Fira Code', monospace;
+    font-size: 13px;
+}
+
+.skills-list li:before {
+    content: '▹';
+    position: absolute;
+    left: 0;
+    color: var(--green);
+    font-size: 14px;
+    line-height: 12px;
 }
 
 /* Numbered Headings */
@@ -126,6 +158,35 @@ body {
     grid-template-columns: repeat(12, 1fr);
     align-items: center;
     gap: 10px;
+    margin-bottom: 100px;
+}
+
+.project-tech-list {
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    z-index: 2;
+    margin: 25px 0 10px;
+    padding: 0;
+    list-style: none;
+    gap: 20px;
+}
+
+.project-links {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.project-links a {
+    color: var(--light-slate);
+    font-size: 20px;
+    transition: color 0.2s ease;
+}
+
+.project-links a:hover {
+    color: var(--green);
 }
 
 /* Custom Cursor */
@@ -211,3 +272,6 @@ body {
 
 /* Add more specific styles as needed */
  
+
+
+
